<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.fm</groupId>
    <artifactId>fm</artifactId>
    <version>${project.version}</version>
    <packaging>pom</packaging>
    <name>Football Manager Application</name>

    <properties>
        <project.version>1.0-SNAPSHOT</project.version>
        <maven.build.timestamp.format>yyyyMMdd.HHmmss</maven.build.timestamp.format>
        <spring.version>3.1.2.RELEASE</spring.version>
        <wicketstuff-annotation.version>6.3.0</wicketstuff-annotation.version>
        <spring.security.version>3.1.3.RELEASE</spring.security.version>
        <ehcache.version>2.6.3</ehcache.version>
        <hibernate.version>3.4.0.GA</hibernate.version>
        <spring-data.version>1.0.4.RELEASE</spring-data.version>
        <validation.api.version>1.1.0.Alpha1</validation.api.version>
        <hibernate-validator.version>5.0.0.Alpha1</hibernate-validator.version>
        <joda-time.version>2.1</joda-time.version>
        <joda-time-hibernate.version>1.3</joda-time-hibernate.version>
        <jadira.version>2.0.1</jadira.version>
        <commons-lang3.version>3.1</commons-lang3.version>
        <junit.version>4.10</junit.version>
        <wicket.version>6.7.0</wicket.version>
        <log4j.version>1.2.17</log4j.version>
        <javax.mail.version>1.4.3</javax.mail.version>
        <hsqldb.version>1.8.0.10</hsqldb.version>
        <javax.servlet.version>2.5</javax.servlet.version>
    </properties>

    <modules>
        <module>domain</module>
        <module>service</module>
        <module>resources</module>
        <module>core</module>
        <module>admin</module>
        <module>user</module>
        <module>server</module>
    </modules>

    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <defaultGoal>install</defaultGoal>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>analyze</id>
                        <goals>
                            <goal>analyze-only</goal>
                        </goals>
                        <configuration>
                            <failOnWarning>false</failOnWarning>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <debug>true</debug>
                    <encoding>UTF8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <excludes>
                        <exclude>log4j.xml</exclude>
                        <exclude>**/log4j.xml</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <forkMode>once</forkMode>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>